[gd_scene load_steps=22 format=3 uid="uid://cb88yr5ic2fsh"]

[ext_resource type="Script" path="res://scenes/widgets/BaseCard.gd" id="1_34vqh"]
[ext_resource type="Texture2D" uid="uid://bnlrutx6fqn75" path="res://assets/UI/cardbackground.png" id="2_18s7j"]
[ext_resource type="Texture2D" uid="uid://q6p8hp3svmij" path="res://assets/placeholders/square-128.png" id="4_sdltv"]
[ext_resource type="Texture2D" uid="uid://ciok7q1ig2v3b" path="res://assets/UI/nameribbon.png" id="4_yin7f"]
[ext_resource type="Texture2D" uid="uid://b17hdt1ivq6c" path="res://assets/UI/typeribbon.png" id="5_w12c3"]
[ext_resource type="Theme" uid="uid://jtcjh78002qb" path="res://assets/themes/richTextTheme.tres" id="6_bqiuq"]
[ext_resource type="FontFile" uid="uid://foyvqv5qw4c4" path="res://assets/fonts/Roboto-Bold.ttf" id="6_eluye"]
[ext_resource type="Texture2D" uid="uid://buu5823mrf4qc" path="res://assets/UI/energy.png" id="6_oq0hy"]
[ext_resource type="FontFile" uid="uid://basqqe0aj8rdw" path="res://assets/fonts/VenturisSansADFCd-Bold.otf" id="8_5fvps"]
[ext_resource type="FontFile" uid="uid://bkfee5lrwcpce" path="res://assets/fonts/Kalam-Regular.ttf" id="8_57257"]
[ext_resource type="FontFile" uid="uid://dy6svryrrc3fo" path="res://assets/fonts/VenturisSansADFCd-Regular.otf" id="9_4epq5"]

[sub_resource type="Animation" id="Animation_odm30"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("spriteNodes:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:size")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(210, 315)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".:scale")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath(".:modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath(".:pivot_offset")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(105, 157)]
}

[sub_resource type="Animation" id="Animation_enf4p"]
resource_name = "hurt"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("spriteNodes:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0.984314, 0.529412, 0.639216, 1), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_2lrer"]
resource_name = "normal"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:size")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(210, 315), Vector2(210, 315)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("spriteNodes/TextNormal:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("spriteNodes/graphicsScaler:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(1, 1)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("spriteNodes/TextNormal:scale")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(1, 1)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("spriteNodes/TextFocused:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_avfhl"]
resource_name = "simpleFocus"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("spriteNodes/graphicsScaler:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1.3, 1.3)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:size")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(273, 409.5)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("spriteNodes/TextNormal:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("spriteNodes/TextFocused:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_gmjir"]
resource_name = "simpleUnfocus"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:size")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(273, 409.5), Vector2(210, 315)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("spriteNodes/TextNormal:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("spriteNodes/graphicsScaler:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1.3, 1.3), Vector2(1, 1)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("spriteNodes/TextNormal:scale")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1.3, 1.3), Vector2(1, 1)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("spriteNodes/TextFocused:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_5tw3a"]
_data = {
"RESET": SubResource("Animation_odm30"),
"hurt": SubResource("Animation_enf4p"),
"normal": SubResource("Animation_2lrer"),
"simpleFocus": SubResource("Animation_avfhl"),
"simpleUnfocus": SubResource("Animation_gmjir")
}

[sub_resource type="Animation" id="Animation_wkijk"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:pivot_offset")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_7bdk2"]
resource_name = "death"
length = 4.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0.832, 0.832), Vector2(1.3, 1.3)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, -0.785398]
}

[sub_resource type="Animation" id="Animation_ykssy"]
resource_name = "use"
length = 1.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:pivot_offset")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.8, 1.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(105, 157), Vector2(105, 157), Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2, 0.3, 0.4, 0.6, 1.1, 1.2),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(1.3, 1.3), Vector2(1.7, 1.7), Vector2(1.1, 1.1), Vector2(1.5, 1.5), Vector2(1.2, 1.2), Vector2(1.2, 1.2), Vector2(1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_8vj3c"]
_data = {
"RESET": SubResource("Animation_wkijk"),
"death": SubResource("Animation_7bdk2"),
"use": SubResource("Animation_ykssy")
}

[node name="BaseCard" type="MarginContainer"]
offset_right = 210.0
offset_bottom = 315.0
script = ExtResource("1_34vqh")

[node name="spriteNodes" type="Node2D" parent="."]

[node name="graphicsScaler" type="Node2D" parent="spriteNodes"]
position = Vector2(105, 157)

[node name="Cardbackground" type="Sprite2D" parent="spriteNodes/graphicsScaler"]
texture = ExtResource("2_18s7j")

[node name="CardArt" type="Sprite2D" parent="spriteNodes/graphicsScaler"]
self_modulate = Color(0.435294, 0.435294, 0.435294, 1)
position = Vector2(-2, -54)
scale = Vector2(1.25, 1.25)
texture = ExtResource("4_sdltv")

[node name="NameRibbon" type="Sprite2D" parent="spriteNodes/graphicsScaler"]
position = Vector2(0, -125)
texture = ExtResource("4_yin7f")

[node name="TypeRibbon" type="Sprite2D" parent="spriteNodes/graphicsScaler"]
position = Vector2(0, 22)
texture = ExtResource("5_w12c3")

[node name="EnergySprite" type="Sprite2D" parent="spriteNodes/graphicsScaler"]
position = Vector2(-104, -151)
texture = ExtResource("6_oq0hy")
centered = false

[node name="StatusSpawn" type="Node2D" parent="spriteNodes/graphicsScaler"]
position = Vector2(74, -91)

[node name="TextNormal" type="Control" parent="spriteNodes"]
layout_mode = 3
anchors_preset = 0
offset_top = 10.0
offset_right = 40.0
offset_bottom = 50.0
pivot_offset = Vector2(105, 157)
mouse_filter = 2

[node name="Name" type="RichTextLabel" parent="spriteNodes/TextNormal"]
layout_mode = 0
offset_left = 39.0
offset_top = 13.0
offset_right = 178.0
offset_bottom = 36.0
mouse_filter = 2
theme = ExtResource("6_bqiuq")
theme_override_colors/default_color = Color(0.862745, 0.92549, 0.972549, 1)
theme_override_colors/font_shadow_color = Color(0.0745098, 0.180392, 0.25098, 1)
theme_override_colors/font_outline_color = Color(0.0745098, 0.180392, 0.25098, 1)
theme_override_constants/shadow_offset_x = 1
theme_override_constants/shadow_offset_y = 0
theme_override_constants/shadow_outline_size = 1
theme_override_constants/outline_size = 2
theme_override_fonts/normal_font = ExtResource("8_5fvps")
theme_override_fonts/bold_font = ExtResource("6_eluye")
theme_override_font_sizes/normal_font_size = 20
theme_override_font_sizes/bold_font_size = 24
bbcode_enabled = true
text = "[center]Name"

[node name="Type" type="RichTextLabel" parent="spriteNodes/TextNormal"]
layout_mode = 0
offset_left = 26.0
offset_top = 158.5
offset_right = 186.0
offset_bottom = 181.5
mouse_filter = 2
theme = ExtResource("6_bqiuq")
theme_override_colors/default_color = Color(0.862745, 0.92549, 0.972549, 1)
theme_override_colors/font_shadow_color = Color(0.0745098, 0.180392, 0.25098, 1)
theme_override_colors/font_outline_color = Color(0.0745098, 0.180392, 0.25098, 1)
theme_override_constants/shadow_offset_x = 1
theme_override_constants/shadow_offset_y = 0
theme_override_constants/shadow_outline_size = 1
theme_override_constants/outline_size = 2
theme_override_fonts/normal_font = ExtResource("8_5fvps")
theme_override_fonts/bold_font = ExtResource("6_eluye")
theme_override_font_sizes/normal_font_size = 20
theme_override_font_sizes/bold_font_size = 24
bbcode_enabled = true
text = "[center]Type"

[node name="Energy" type="RichTextLabel" parent="spriteNodes/TextNormal"]
layout_mode = 0
offset_left = 4.0
offset_top = 8.0
offset_right = 48.0
offset_bottom = 42.0
mouse_filter = 2
theme = ExtResource("6_bqiuq")
theme_override_colors/default_color = Color(0.862745, 0.92549, 0.972549, 1)
theme_override_colors/font_shadow_color = Color(0.0745098, 0.180392, 0.25098, 1)
theme_override_colors/font_outline_color = Color(0.0745098, 0.180392, 0.25098, 1)
theme_override_constants/shadow_offset_x = 1
theme_override_constants/shadow_offset_y = 0
theme_override_constants/shadow_outline_size = 1
theme_override_constants/outline_size = 2
theme_override_fonts/normal_font = ExtResource("8_5fvps")
theme_override_fonts/bold_font = ExtResource("6_eluye")
theme_override_font_sizes/normal_font_size = 24
theme_override_font_sizes/bold_font_size = 24
bbcode_enabled = true
text = "[center]0"

[node name="Description" type="RichTextLabel" parent="spriteNodes/TextNormal"]
layout_mode = 0
offset_left = 16.0
offset_top = 192.0
offset_right = 192.0
offset_bottom = 270.0
mouse_filter = 2
theme = ExtResource("6_bqiuq")
theme_override_colors/default_color = Color(0.862745, 0.92549, 0.972549, 1)
theme_override_colors/font_shadow_color = Color(0.0745098, 0.180392, 0.25098, 1)
theme_override_colors/font_outline_color = Color(0.0745098, 0.180392, 0.25098, 1)
theme_override_constants/shadow_offset_x = 1
theme_override_constants/shadow_offset_y = 2
theme_override_constants/shadow_outline_size = 1
theme_override_constants/outline_size = 2
theme_override_fonts/normal_font = ExtResource("8_5fvps")
theme_override_fonts/bold_font = ExtResource("9_4epq5")
theme_override_font_sizes/normal_font_size = 18
theme_override_font_sizes/bold_font_size = 24
bbcode_enabled = true
text = "[center]Lorem ipsum dolor sit amet, consectetur adipiscing elit [img={25}]res://assets/Symbols/poison.png[img]"

[node name="TextFocused" type="Control" parent="spriteNodes"]
visible = false
layout_mode = 3
anchors_preset = 0
offset_left = -32.0
offset_top = -37.0
offset_right = 241.0
offset_bottom = 372.0
pivot_offset = Vector2(107, 157)
mouse_filter = 2

[node name="Name" type="RichTextLabel" parent="spriteNodes/TextFocused"]
layout_mode = 0
offset_left = 54.0
offset_top = 15.0
offset_right = 226.0
offset_bottom = 47.0
mouse_filter = 2
theme = ExtResource("6_bqiuq")
theme_override_colors/default_color = Color(0.862745, 0.92549, 0.972549, 1)
theme_override_colors/font_shadow_color = Color(0.0745098, 0.180392, 0.25098, 1)
theme_override_colors/font_outline_color = Color(0.0745098, 0.180392, 0.25098, 1)
theme_override_constants/shadow_offset_x = 1
theme_override_constants/shadow_offset_y = 0
theme_override_constants/shadow_outline_size = 1
theme_override_fonts/normal_font = ExtResource("8_57257")
theme_override_fonts/bold_font = ExtResource("8_5fvps")
theme_override_font_sizes/normal_font_size = 18
theme_override_font_sizes/bold_font_size = 26
bbcode_enabled = true
text = "[center][b]Name"

[node name="Type" type="RichTextLabel" parent="spriteNodes/TextFocused"]
layout_mode = 0
offset_left = 57.0
offset_top = 205.0
offset_right = 217.0
offset_bottom = 236.0
mouse_filter = 2
theme = ExtResource("6_bqiuq")
theme_override_colors/default_color = Color(0.862745, 0.92549, 0.972549, 1)
theme_override_colors/font_shadow_color = Color(0.0745098, 0.180392, 0.25098, 1)
theme_override_colors/font_outline_color = Color(0.0745098, 0.180392, 0.25098, 1)
theme_override_constants/shadow_offset_x = 1
theme_override_constants/shadow_offset_y = 0
theme_override_constants/shadow_outline_size = 1
theme_override_fonts/normal_font = ExtResource("8_57257")
theme_override_fonts/bold_font = ExtResource("8_5fvps")
theme_override_font_sizes/normal_font_size = 18
theme_override_font_sizes/bold_font_size = 26
bbcode_enabled = true
text = "[center][b]Type"

[node name="Energy" type="RichTextLabel" parent="spriteNodes/TextFocused"]
layout_mode = 0
offset_left = 7.0
offset_top = 10.0
offset_right = 59.0
offset_bottom = 53.0
mouse_filter = 2
theme = ExtResource("6_bqiuq")
theme_override_colors/default_color = Color(0.862745, 0.92549, 0.972549, 1)
theme_override_colors/font_shadow_color = Color(0.0745098, 0.180392, 0.25098, 1)
theme_override_colors/font_outline_color = Color(0.0745098, 0.180392, 0.25098, 1)
theme_override_constants/shadow_offset_x = 1
theme_override_constants/shadow_offset_y = 0
theme_override_constants/shadow_outline_size = 1
theme_override_fonts/normal_font = ExtResource("8_5fvps")
theme_override_fonts/bold_font = ExtResource("9_4epq5")
theme_override_font_sizes/normal_font_size = 24
theme_override_font_sizes/bold_font_size = 32
bbcode_enabled = true
text = "[center][b]0"

[node name="Description" type="RichTextLabel" parent="spriteNodes/TextFocused"]
layout_mode = 0
offset_left = 21.0
offset_top = 251.0
offset_right = 247.0
offset_bottom = 379.0
mouse_filter = 2
theme = ExtResource("6_bqiuq")
theme_override_colors/default_color = Color(0.862745, 0.92549, 0.972549, 1)
theme_override_colors/font_shadow_color = Color(0.0745098, 0.180392, 0.25098, 1)
theme_override_colors/font_outline_color = Color(0.0745098, 0.180392, 0.25098, 1)
theme_override_constants/shadow_offset_x = 1
theme_override_constants/shadow_offset_y = 2
theme_override_constants/shadow_outline_size = 1
theme_override_fonts/normal_font = ExtResource("8_57257")
theme_override_fonts/bold_font = ExtResource("8_5fvps")
theme_override_font_sizes/normal_font_size = 14
theme_override_font_sizes/bold_font_size = 24
bbcode_enabled = true
text = "[center][b]Lorem ipsum dolor sit amet, consectetur adipiscing elit [img={25}]res://assets/Symbols/poison.png[img]"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_5tw3a")
}

[node name="AnimationPlayer2" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_8vj3c")
}

[connection signal="gui_input" from="." to="." method="_on_gui_input"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
